intel/bench_25/extr_linuxtoolsbuildfeaturetest-libpython-version.c_main_test_libpython_version/log.txt
bench_25/extr_linuxtoolsbuildfeaturetest-libpython-version.c_main_test_libpython_version/extr_linuxtoolsbuildfeaturetest-libpython-version.c_main_test_libpython_version.c:7:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
